--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,13 +22,17 @@
   // Persist Claude Code configuration (API key, settings) across rebuilds.
   // Without this mount you'd have to re-authenticate every time.
   "mounts": [
-    "source=cc-config-${devcontainerId},target=/home/devuser/.claude,type=volume",
-    "source=cc-history-${devcontainerId},target=/commandhistory,type=volume"
+    "source=cc-config-${localWorkspaceFolderBasename},target=/home/devuser/.claude,type=volume",
+    "source=cc-history-${localWorkspaceFolderBasename},target=/commandhistory,type=volume"
   ],
   "containerEnv": {
     // Set to "false" to skip the firewall and allow unrestricted network access.
     "ENABLE_FIREWALL": "false",
-    "UV_LINK_MODE": "copy"
+    "UV_LINK_MODE": "copy",
+    // Point git at our askpass script (which echoes GITHUB_TOKEN from .env).
+    "GIT_ASKPASS": "/usr/local/bin/git-askpass.sh",
+    // Disable SSH agent forwarding so host SSH keys can't be used.
+    "SSH_AUTH_SOCK": ""
   },
   // init-firewall.sh always runs (it fixes /etc/hosts regardless of firewall
   // setting). sudo -E passes ENABLE_FIREWALL through to the script.
@@ -39,7 +43,15 @@
     "vscode": {
       "extensions": [
         "anthropic.claude-code"
-      ]
+      ],
+      "settings": {
+        // Prevent VS Code from copying host ~/.gitconfig into the container.
+        "dev.containers.copyGitConfig": false,
+        // Prevent VS Code from injecting its credential helper bridge.
+        "dev.containers.gitCredentialHelperConfigLocation": "none",
+        // Prevent VS Code's integrated terminal from using its own askpass.
+        "git.useIntegratedAskPass": false
+      }
     }
   },
   "features": {
